releases/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noodlecases-auth
  labels:
    name: noodlecases-auth
    istio-injection: enabled
