releases/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
  namespace: noodlecases-auth
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  hostnames: ["id.noodlecases.tech"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: noodlecases-keycloak
      port: 80
